--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# lock files
+package-lock.json
+.lock.json
+.lock
+
 # environment variables
 .env
 .env.production
