--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/svelte": "^3.1.1",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.15",
+    "monaco-editor": "^0.44.0",
     "svelte": "^4.2.1",
     "tailwindcss": "^3.3.3"
   }
